--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
       font-family: 'Lato', sans-serif;
     }
 
+    .header {
+      margin: 100px;
+    }
+
     .main {
       height: 100%;
-      margin-top: 15%;
+      margin-top: 12%;
     }
 
     span {
@@ -89,14 +93,45 @@
       padding: 5px 15px;
       border-radius: 5px;
       position: fixed;
-      top: 40px;
+      top: 30px;
       right: 50px;
     }
+
+    img.bottom-right {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      width: 20%;
+    }
+
+    img.bottom-left {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      width: 23%;
+    }
+
+    img.bottom-center1 {
+      position: fixed;
+      left: 30%;
+      bottom: 10px;
+      height: 30%;
+    }
+
+    img.bottom-center2 {
+      position: fixed;
+      left: 55%;
+      bottom: 10px;
+      height: 30%;
+    }
+
   </style>
 </head>
 <body>
-  <span class="logo">Inflark</span>
-  <button class="contact"> Contact us </button>
+  <div class="header">
+    <span class="logo">Inflark</span>
+    <button class="contact"> Contact us </button>
+  </div>
   <div class="main">
     <span> Influencer Marketing Platform &amp; Marketplace </span>
     <span class="in-progress"> Work in Progress . .</span>
@@ -106,5 +141,9 @@
       <span class="sub-title"> make your instagram bio shoppable </span>
     </div>
   </div>
+  <img src="./images/background1.png" class="bottom-right"></img>
+  <img src="./images/background2.jpg" class="bottom-left"></img>
+  <img src="./images/background3.png" class="bottom-center1" ></img>
+  <img src="./images/background4.png" class="bottom-center2" ></img>
 </body>
 </html>
