Changes for background2

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       position: fixed;
       bottom: 10px;
       left: 10px;
-      width: 23%;
+      width: 20%;
     }
 
     img.bottom-center1 {
@@ -142,7 +142,7 @@
     </div>
   </div>
   <img src="./images/background1.png" class="bottom-right"></img>
-  <img src="./images/background2.jpg" class="bottom-left"></img>
+  <img src="./images/background2.png" class="bottom-left"></img>
   <img src="./images/background3.png" class="bottom-center1" ></img>
   <img src="./images/background4.png" class="bottom-center2" ></img>
 </body>
